feat: finsihed search Engine

--- a/templates/result.html
+++ b/templates/result.html
@@ -74,8 +74,9 @@
     <hr />
     <div class="result">
         {% for item in result %}
-          <a href="{{ item[0] }}">
+          <a href="{{ item[1] }}">
             <h2>{{ item[0] }}</h2>
+            <P>{{ item[2] }}</P>
           </a>
         {% endfor %}
     </div>
