--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
 
     <style>
       body {
-        background-color: rgb(181, 181, 181);
+        background-color: rgb(25, 25, 25);
       }
 
       .sevillana-regular {
@@ -61,6 +61,11 @@
         height: 90%;
         width: 100%;
       }
+
+      a{
+        color: white;
+      }
+
     </style>
   </head>
   <body>
