style: updated templeate

--- a/templates/result.html
+++ b/templates/result.html
@@ -70,7 +70,9 @@
   </head>
   <body>
     <div class="main">
+      <a href="/">
       <h1 class="Home sevillana-regular">Phantom</h1>
+      </a>
       <form method="POST" action="/" class="Form">
         <input type="text" name="input_text" class="Search" value="{{ input_text }}" />
         <input type="submit" value="Search" class="Enter" />
