chore: local deploy
* test: added tests

* test: updated trigger

* test: updated nltk lib

* test: updated flask test

* test: optimized testing

* feat: added master-child arch

* updated changes

* feat: added run for render deploy

* feat: added health check on flask

* feat: removed tf from indexed.json

* chore:added ls

* chore:download nltk packages

* fix: removed tf

* fix: removed query engine from build file

* chore: updated filenames

* chore: added gunicorn deploy

* chore: final deploy

* style: updated templeate

* chore: updated build time

* chore: updated child

--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
 
     <style>
       body {
-        background-color: rgb(181, 181, 181);
+        background-color: rgb(25, 25, 25);
       }
 
       .sevillana-regular {
@@ -61,11 +61,18 @@
         height: 90%;
         width: 100%;
       }
+
+      a{
+        color: white;
+      }
+
     </style>
   </head>
   <body>
     <div class="main">
+      <a href="/">
       <h1 class="Home sevillana-regular">Phantom</h1>
+      </a>
       <form method="POST" action="/" class="Form">
         <input type="text" name="input_text" class="Search" value="{{ input_text }}" />
         <input type="submit" value="Search" class="Enter" />
