--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,17 @@
       .Enter {
         height: 40px;
       }
+
+      .credits {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        color: white;
+        padding: 10px;
+        text-align: right;
+        font-size: xx-small;
+      }
     </style>
   </head>
   <body>
@@ -61,6 +72,10 @@
         <input type="text" name="input_text" class="Search" value="{{ input_text }}" />
         <input type="submit" value="Search" class="Enter" />
       </form>
+    </div>
+
+    <div class="credits">
+      trained on : "https://www.geeksforgeeks.org/" "https://stackoverflow.com/questions" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/"
     </div>
   </body>
 </html>
