--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="credits">
-      trained on : "https://www.geeksforgeeks.org/" "https://stackoverflow.com/questions" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/"
+      trained on : "https://www.geeksforgeeks.org/" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/" "https://www.hindustantimes.com/india-news/" "https://www.bbc.com/news"
     </div>
   </body>
 </html>
