feat: Integrated with supabase for remote DB (#9)
* feat: transfered the query to GET method

* added supaabase config

* feat: storage uses supabase and stores individually

* feat: phantom_engine uses same table for title and url

* feat: can only remove title_storage offline in another push

* feat: supabase fetch availalable in indexer

* fix: fixed query_engine

* build: updated build

* chore: updated root sites

* feat: added supabase integration on query_engine

* docs: added docs on supabase

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,14 +68,14 @@
   <body>
     <div class="main">
       <h1 class="Home sevillana-regular">Phantom</h1>
-      <form method="POST" action="/" class="Form">
-        <input type="text" name="input_text" class="Search" value="{{ input_text }}" />
+      <form method="GET" action="/" class="Form">
+        <input type="text" name="q" class="Search" placeholder="Search Query" value="{{ input_text }}" />
         <input type="submit" value="Search" class="Enter" />
       </form>
     </div>
 
     <div class="credits">
-      trained on : "https://www.geeksforgeeks.org/" "https://stackoverflow.com/questions" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/"
+      trained on : "https://www.geeksforgeeks.org/" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/" "https://www.hindustantimes.com/india-news/" "https://www.bbc.com/news"
     </div>
   </body>
 </html>
