--- a/templates/home.html
+++ b/templates/home.html
@@ -68,14 +68,23 @@
   <body>
     <div class="main">
       <h1 class="Home sevillana-regular">Phantom</h1>
-      <form method="GET" action="/" class="Form">
+      <form id="searchForm" method="GET" action="/" class="Form">
         <input type="text" name="q" class="Search" placeholder="Search Query" value="{{ input_text }}" />
+        <input type="hidden" id="browser" name="browser" />
+        <input type="hidden" id="device" name="device" />
         <input type="submit" value="Search" class="Enter" />
       </form>
     </div>
+
 
     <div class="credits">
       trained on : "https://www.geeksforgeeks.org/" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/" "https://www.hindustantimes.com/india-news/" "https://www.bbc.com/news"
     </div>
   </body>
+  <script>
+    document.getElementById('searchForm').addEventListener('submit', function() {
+      document.getElementById('browser').value = navigator.userAgent;
+      document.getElementById('device').value = navigator.platform;
+    });
+  </script>
 </html>
