feat: made UI responsive

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,6 +53,43 @@
         height: 40px;
       }
 
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 3rem;
+        }
+
+        .Search {
+          width: 200px;
+        }
+
+        .sevillana-regular {
+          font-size: 5rem;
+        }
+      }      
+
+      @media (max-width: 300px) {
+    h1 {
+      font-size: 2rem;
+    }
+
+    .Search {
+      width: 150px;
+    }
+
+    .sevillana-regular {
+      font-size: 4rem;
+    }
+
+    .Form {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .Enter {
+      margin-top: 1rem;
+    }
+  }
+
     </style>
   </head>
   <body>
