--- a/templates/result.html
+++ b/templates/result.html
@@ -62,8 +62,12 @@
         width: 100%;
       }
 
-      a{
+      a {
         color: white;
+      }
+
+      .Home {
+        text-decoration: none;
       }
 
       .result a {
@@ -87,15 +91,51 @@
         background-color: rgb(50, 50, 50);
       }
 
+      @media (max-width: 600px) {
+        .sevillana-regular {
+          font-size: 2rem;
+        }
+
+        h1 {
+          font-size: 2rem;
+        }
+
+        .Search {
+          width: 200px;
+          margin-left: 5%;
+        }
+
+        .item {
+          margin: 5px;
+          padding: 5px;
+        }
+      }
+
+      @media (max-width: 400px) {
+        .main {
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+
+        .Form {
+          justify-content: flex-start;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="main">
-      <a href="/">
-      <h1 class="Home sevillana-regular">Phantom</h1>
+      <a href="/" class="Home">
+        <h1 class="Home sevillana-regular">Phantom</h1>
       </a>
       <form id="searchForm" method="GET" action="/" class="Form">
-        <input type="text" name="q" class="Search" placeholder="Search Query" value="{{ input_text }}" />
+        <input
+          type="text"
+          name="q"
+          class="Search"
+          placeholder="Search Query"
+          value="{{ input_text }}"
+        />
         <input type="hidden" id="browser" name="browser" />
         <input type="hidden" id="device" name="device" />
         <input type="submit" value="Search" class="Enter" />
@@ -104,19 +144,21 @@
     <hr />
     <div class="result">
       {% for item in result %}
-        <div class="item">
-          <a href="{{ item[0] }}">
-            <h2>{{ item[2] }}</h2>
-          </a>
-          <div class="url">{{ item[0] }}</div>
-        </div>
+      <div class="item">
+        <a href="{{ item[0] }}">
+          <h2>{{ item[2] }}</h2>
+        </a>
+        <div class="url">{{ item[0] }}</div>
+      </div>
       {% endfor %}
     </div>
   </body>
   <script>
-    document.getElementById('searchForm').addEventListener('submit', function() {
-      document.getElementById('browser').value = navigator.userAgent;
-      document.getElementById('device').value = navigator.platform;
-    });
+    document
+      .getElementById("searchForm")
+      .addEventListener("submit", function () {
+        document.getElementById("browser").value = navigator.userAgent;
+        document.getElementById("device").value = navigator.platform;
+      });
   </script>
 </html>
