--- a/templates/home.html
+++ b/templates/home.html
@@ -53,16 +53,43 @@
         height: 40px;
       }
 
-      .credits {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        color: white;
-        padding: 10px;
-        text-align: right;
-        font-size: xx-small;
-      }
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 3rem;
+        }
+
+        .Search {
+          width: 200px;
+        }
+
+        .sevillana-regular {
+          font-size: 5rem;
+        }
+      }      
+
+      @media (max-width: 300px) {
+    h1 {
+      font-size: 2rem;
+    }
+
+    .Search {
+      width: 150px;
+    }
+
+    .sevillana-regular {
+      font-size: 4rem;
+    }
+
+    .Form {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .Enter {
+      margin-top: 1rem;
+    }
+  }
+
     </style>
   </head>
   <body>
@@ -76,10 +103,6 @@
       </form>
     </div>
 
-
-    <div class="credits">
-      trained on : "https://www.geeksforgeeks.org/" "https://en.wikipedia.org/wiki/India" "https://developers.cloudflare.com/" "https://bloggingidol.com/best-programming-blogs/" "https://www.hindustantimes.com/india-news/" "https://www.bbc.com/news"
-    </div>
   </body>
   <script>
     document.getElementById('searchForm').addEventListener('submit', function() {
