fix: fixed responsivness

--- a/templates/result.html
+++ b/templates/result.html
@@ -45,11 +45,11 @@
       }
 
       .Search {
-        margin-left: 10%;
-        width: 300px;
+        /* margin-left: 10%; */
+        width: 100%;
         height: 30px;
         margin-right: 10px;
-        border-radius: 5px; /* Adjust as needed */
+        border-radius: 5px;
       }
 
       .Enter {
@@ -68,6 +68,7 @@
 
       .Home {
         text-decoration: none;
+        margin-right: 5%;
       }
 
       .result a {
@@ -102,7 +103,6 @@
 
         .Search {
           width: 200px;
-          margin-left: 5%;
         }
 
         .item {
@@ -115,6 +115,10 @@
         .main {
           flex-direction: column;
           justify-content: flex-start;
+        }
+        
+        .Search {
+          width: 250px;
         }
 
         .Form {
