chore: updated UI result.html

--- a/templates/result.html
+++ b/templates/result.html
@@ -42,6 +42,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 50%;
+        margin: 10px;
+      }
+
+      .Home {
+        text-decoration: none;
+        margin-right: 5%;
       }
 
       .Search {
@@ -64,11 +71,6 @@
 
       a {
         color: white;
-      }
-
-      .Home {
-        text-decoration: none;
-        margin-right: 5%;
       }
 
       .result a {
