feat: added AI feature

--- a/templates/result.html
+++ b/templates/result.html
@@ -94,6 +94,17 @@
         background-color: rgb(50, 50, 50);
       }
 
+      .ai_div {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        background-color: rgb(23, 51, 43);
+        color: white;
+        padding: 3%;
+        margin: 1%;
+      }
+
       @media (max-width: 600px) {
         .sevillana-regular {
           font-size: 2rem;
@@ -111,6 +122,12 @@
           margin: 5px;
           padding: 5px;
         }
+
+        .ai_div {
+          margin: 20px;
+          padding: 20px;
+          border-radius: 5px;
+        }
       }
 
       @media (max-width: 400px) {
@@ -118,7 +135,7 @@
           flex-direction: column;
           justify-content: flex-start;
         }
-        
+
         .Search {
           width: 250px;
         }
@@ -149,6 +166,9 @@
     </div>
     <hr />
     <div class="result">
+      <div class="ai_div">
+        <h3 class="ai_res">AI Generated Result .:</h3>
+      </div>
       {% for item in result %}
       <div class="item">
         <a href="{{ item[0] }}">
@@ -160,11 +180,46 @@
     </div>
   </body>
   <script>
+    function fetchData() {
+      var inputText = document.querySelector(".Search").value;
+
+      fetch("/ai_process", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({ input_text: inputText }),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          var aiResElement = document.querySelector(".ai_res");
+          var aiDiv = document.querySelector(".ai_div");
+          if (aiResElement && aiDiv) {
+            if (data.generated_text === "" || data.generated_text === null) {
+              aiDiv.style.display = "none";
+              return;
+            }
+            aiResElement.textContent = data.generated_text;
+            aiDiv.style.display = "flex";
+          }
+        })
+        .catch((error) => {
+          console.error("Error:", error);
+          var aiDiv = document.querySelector(".ai_div");
+          if (aiDiv) {
+            aiDiv.style.display = "none";
+          }
+        });
+    }
+
     document
       .getElementById("searchForm")
       .addEventListener("submit", function () {
         document.getElementById("browser").value = navigator.userAgent;
         document.getElementById("device").value = navigator.platform;
       });
+
+    // Fetch the AI response
+    fetchData();
   </script>
 </html>
