chore: added versioning

--- a/templates/home.html
+++ b/templates/home.html
@@ -118,7 +118,7 @@
       </form>
     </div>
 
-    <div class="copyright">
+    <div class="copyright">0.9.2 |
       https://github.com/AnsahMohammad/Phantom
     </div>
   </body>
